<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/grid"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Homepage">

    <GridLayout
        android:id="@+id/grid1"
        android:layout_width="335dp"
        android:layout_height="409dp"
        android:columnCount="2"
        android:padding="20dp"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.686"
        tools:ignore="MissingConstraints"

        >

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:onClick="profile"
            app:cardCornerRadius="20dp"
            android:paddingLeft="10dp"

            >

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="190dp"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="135dp"
                    android:src="@drawable/ic_baseline_person_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/profile"
                    android:textSize="20dp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:onClick="foods"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="190dp"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="135dp"
                    android:src="@drawable/ic_baseline_food_bank_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/foods"
                    android:textSize="20dp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:onClick="beverages"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="190dp"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"

                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="135dp"
                    android:src="@drawable/ic_baseline_emoji_food_beverage_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/beverages"
                    android:textSize="20dp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:onClick="contact"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="190dp"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="135dp"
                    android:src="@drawable/ic_baseline_contact_support_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/contact"
                    android:textSize="20dp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </GridLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="185dp"
        android:layout_height="86dp"
        android:text="TextView"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

</androidx.constraintlayout.widget.ConstraintLayout>

